# oracles

./: .gitignore  Cargo.toml  Distro.sage.toml  README.md  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.grok-plugin/: marketplace.json
crates/agent-broker/: Cargo.toml
crates/agent-broker/src/: approval.rs  broker.rs  cache.rs  discovery.rs  execute.rs  grant_decision.rs  hook_gate.rs  lib.rs  policy.rs  profile.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  newtypes.rs  product.rs
crates/aos-mcp/: Capsule.toml  Cargo.toml
crates/aos-mcp/src/: host_hooks.rs  lib.rs
crates/astrid-mcp/: Capsule.toml  Cargo.toml
crates/astrid-mcp/src/: lib.rs
crates/claude-completion/: Capsule.toml  Cargo.toml
crates/claude-completion/src/: anthropic.rs  lib.rs  sse.rs
crates/claude-install/: Capsule.toml  Cargo.toml
crates/claude-install/src/: claude_md.rs  config.rs  layout.rs  lib.rs  settings.rs
crates/claude-runner/: Capsule.toml  Cargo.toml
crates/claude-runner/src/: codec.rs  config.rs  hooks.rs  hooks_tests.rs  identity.rs  install.rs  lib.rs  lib_tests.rs  settings.rs  shutdown.rs  spawn.rs  state.rs  supervisor.rs
crates/claude-runner/wit/: claude-install.wit
crates/codex-install/: Capsule.toml  Cargo.toml
crates/codex-install/src/: lib.rs
crates/codex-install/wit/: codex-install.wit
crates/codex-runner/: Capsule.toml  Cargo.toml  README.md
crates/codex-runner/src/: lib.rs  provision.rs
crates/mimir-mcp/: Capsule.toml  Cargo.toml
crates/mimir-mcp/src/: lib.rs
crates/oracle-broker/: Cargo.toml
crates/oracle-broker/src/: approval.rs  broker.rs  cache.rs  discovery.rs  execute.rs  grant_decision.rs  hook_gate.rs  lib.rs  policy.rs  profile.rs
crates/oracle-core/: Cargo.toml
crates/oracle-core/src/: host.rs  identity.rs  lib.rs  newtypes.rs
crates/oracle-host/: Cargo.toml
crates/oracle-host/src/: fs.rs  ids.rs  install.rs  lib.rs
crates/sage-mcp/: Cargo.toml
crates/sage-mcp/src/: lib.rs
crates/sibyl/: Capsule.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/sibyl-install/: Capsule.toml  Cargo.toml  README.md
crates/sibyl-install/src/: atomic.rs  lib.rs
crates/sibyl-mcp/: Capsule.toml  Cargo.toml
crates/sibyl-mcp/src/: lib.rs
crates/sibyl/src/: lib.rs
distros/: claude.toml  codex.toml  grok.toml  mimir.toml  sage.toml  sibyl.toml
packs/: claude.toml  codex.toml  grok.toml
plugins/claude/: .mcp.json  README.md  settings.json
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/commands/: capsules.md  doctor.md  hud.md  status.md  whoami.md
plugins/claude/hooks/: hooks.json
plugins/claude/output-styles/: aos.md
plugins/claude/skills/forge/: SKILL.md
plugins/codex/: .mcp.json  install.sh
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/docs/: multi-window-report.md
plugins/codex/hooks/: hooks.json
plugins/codex/skills/astrid/: MEMORY.md  SKILL.md
plugins/grok/: .mcp.json  README.md  install.sh
plugins/grok/.grok-plugin/: plugin.json
plugins/grok/commands/: capsules.md  doctor.md  status.md  whoami.md
plugins/grok/hooks/: hooks.json
plugins/grok/skills/aos/: MEMORY.md  SKILL.md
plugins/grok/skills/forge/: SKILL.md
plugins/mimir/: .mcp.json  install.sh
plugins/mimir/commands/: capsules.md  doctor.md
plugins/mimir/skills/mimir/: MEMORY.md  SKILL.md
plugins/sage/: README.md
plugins/sibyl/: .mcp.json  install.sh
plugins/sibyl/.codex-plugin/: plugin.json
plugins/sibyl/docs/: multi-window-report.md
plugins/sibyl/hooks/: hooks.json
plugins/sibyl/skills/sibyl/: MEMORY.md  SKILL.md
plugins/unicity-aos/: .mcp.json  README.md  install.sh
plugins/unicity-aos/.codex-plugin/: plugin.json
plugins/unicity-aos/docs/: multi-window-report.md
plugins/unicity-aos/hooks/: hooks.json
plugins/unicity-aos/skills/capsule-forge/: SKILL.md
plugins/unicity-aos/skills/capsule-forge/agents/: openai.yaml
plugins/unicity-aos/skills/meta-harness/: SKILL.md
plugins/unicity-aos/skills/meta-harness/agents/: openai.yaml
plugins/unicity-aos/skills/unicity-aos/: MEMORY.md  SKILL.md
plugins/unicity-aos/skills/unicity-aos/agents/: openai.yaml
release/: runtime-compatibility.toml
scripts/: sync-plugins.sh  test-install.sh  test-plugin-bootstrap.sh  test_brand_boundary.py  test_codex_mcp_startup.py  test_host_mcp_startup.py  test_pack_contract.py  test_release_contract.py  test_wit_contract.py
