[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/agent-core", "crates/agent-broker"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-astrid/agents"
rust-version = "1.94"

[workspace.dependencies]
agent-core = { path = "crates/agent-core" }
agent-broker = { path = "crates/agent-broker" }
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
uuid = { version = "1.0", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
