[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/oracle-core", "crates/oracle-host"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/oracles"
rust-version = "1.94"

[workspace.dependencies]
oracle-core = { path = "crates/oracle-core" }
oracle-host = { path = "crates/oracle-host" }
astrid-sdk = { version = "0.7", features = ["derive"] }
blake3 = { version = "1.8", default-features = false, features = ["pure"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11", default-features = false }
toml = "1.1"
uuid = { version = "1.0", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
