[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared product identity types for Astrid-governed agent plugins"
publish = false

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[lib]
path = "src/lib.rs"
