[package]
name = "aos-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unicity AOS MCP broker capsule over the neutral Astrid runtime wire"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oracle-broker.workspace = true
oracle-core.workspace = true
astrid-sdk.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
