[package]
name = "claude-install"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Per-principal Claude home provisioner and OAuth walk-through"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oracle-core.workspace = true
oracle-host.workspace = true
astrid-sdk.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
