[package]
name = "codex-install"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Per-principal Codex home provisioner (HostProvisioner adapter)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oracle-core.workspace = true
oracle-host.workspace = true
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true
