[package]
name = "oracle-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared MCP tool broker for Unicity AOS oracle integrations"
publish = false

[dependencies]
oracle-core.workspace = true
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lib]
path = "src/lib.rs"
# Host tests run as native; capsule thin crates re-export as cdylib.
