[package]
name = "oracle-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared host-adapter primitives for Unicity AOS oracle integrations"
publish = false

[dependencies]
oracle-core.workspace = true
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"
