[package]
name = "sibyl-install"
version.workspace = true
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Per-principal Codex provisioner for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
